kubernetesManifests/individualManifestFiles/deployment-APIServer.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: droneapiserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: droneapiserver
  template:
    metadata:
      labels:
        app: droneapiserver
        tier: frontend
    spec:
      containers:
      - name: droneapiserver
        image: lesterthomas/droneapiserver:3.0.8
        ports:
        - name: droneapiserver
          containerPort: 1234
