kubernetesManifests/individualManifestFiles/deployment-redis-commander.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis-commander
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-commander
  template:
    metadata:
      labels:
        app: redis-commander
    spec:
      containers:
      - name: redis-commander
        image: rediscommander/redis-commander
        ports:
        - name: redis-commander
          containerPort: 8081
