kubernetesManifests/individualManifestFiles/pod-redis-sentinel.yaml
###################################################################
# Redis Database and Sentinel pod (for high availability run additional script to launch redis and sentinel slaves). This pod boot-straps redis and sentinel
###################################################################
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: redis
    name: redis
    redis-sentinel: "true"
    role: master
  name: redis-master
spec:
  containers:
    - name: master
      image: redis
      ports:
        - containerPort: 6379
      resources:
        limits:
          cpu: "0.1"
      volumeMounts:
        - mountPath: /redis-master-data
          name: data
    - name: sentinel
      image: redis
      ports:
        - containerPort: 26379
  volumes:
    - name: data
      emptyDir: {}
