kubernetesManifests/individualManifestFiles/statefulSet-APIWorker.yaml
###################################################################
# droneapiworker stateful container deployment
###################################################################
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: droneapiworker
spec:
  podManagementPolicy: Parallel
  selector:
    matchLabels:
      app: droneapiworker
  serviceName: "droneapiworker"
  replicas: 1
  template:
    metadata:
      labels:
        app: droneapiworker
        tier: backend
    spec:
      terminationGracePeriodSeconds: 1
      containers:
      - name: droneapiworker
        image: lesterthomas/droneapiworker:3.0.11
        ports:
        - containerPort: 1236
          name: droneapiworker
        livenessProbe:
          httpGet:
            path: /admin
            port: 1236
