kubernetesManifests/individualManifestFiles/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
    tier: backend
spec:
  ports:
  - port: 6379
    targetPort: redis
    name: redis
  selector:
    app: redis
    tier: backend
